[fix] dismissible editor still visible on certain browsers, fixes #136

--- a/app/assets/stylesheets/main_backoffice.scss
+++ b/app/assets/stylesheets/main_backoffice.scss
@@ -369,16 +369,9 @@ details {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
-/* #editor_content {
-  padding: 0;
+#editor_content {
+  padding: 10px;
 }
-
-#editor_content:not(:empty) {
-  width: 100%;
-  border: 1px #f00 solid;
-  padding: 0.5em;
-} */
-
 
 // ---------------------------------------------------------- visibility popover
 .gcpopover {
